// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserTable should display loading spinner when isLoaded is true 1`] = `
<div
  class="MuiPaper-root-0232 MuiPaper-elevation2-0236 MuiPaper-rounded-0233 UserTable-root-0229"
>
  <table
    class="MuiTable-root-0259 UserTable-table-0230"
  >
    <thead
      class="MuiTableHead-root-0260"
    >
      <tr
        class="MuiTableRow-root-0261 MuiTableRow-head-0264"
      >
        <th
          class="MuiTableCell-root-0269 WithStyles-TableCell--root-0266 MuiTableCell-head-0270 WithStyles-TableCell--head-0267"
          scope="col"
        />
        <th
          class="MuiTableCell-root-0269 WithStyles-TableCell--root-0266 MuiTableCell-head-0270 WithStyles-TableCell--head-0267"
          scope="col"
        >
          <button
            tabindex="0"
            class="MuiButtonBase-root-0303 MuiButton-root-0277 MuiButton-text-0279 MuiButton-flat-0282"
            type="button"
          >
            <span
              class="MuiButton-label-0278"
            >
              First
              <span
                class="sc-htpNat gGABWs"
              />
            </span>
            <span
              class="MuiTouchRipple-root-0306"
            />
          </button>
        </th>
        <th
          class="MuiTableCell-root-0269 WithStyles-TableCell--root-0266 MuiTableCell-head-0270 WithStyles-TableCell--head-0267"
          scope="col"
        >
          <button
            tabindex="0"
            class="MuiButtonBase-root-0303 MuiButton-root-0277 MuiButton-text-0279 MuiButton-flat-0282"
            type="button"
          >
            <span
              class="MuiButton-label-0278"
            >
              Last
              <svg
                class="mdi-icon sc-bdVaJa pPqKJ"
                width="24"
                height="24"
                fill="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10,11V13H18V11H10M10,5V7H14V5H10M10,17V19H22V17H10M6,7H8.5L5,3.5L1.5,7H4V20H6V7Z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-0306"
            />
          </button>
        </th>
        <th
          class="MuiTableCell-root-0269 WithStyles-TableCell--root-0266 MuiTableCell-head-0270 WithStyles-TableCell--head-0267"
          scope="col"
        >
          <button
            tabindex="0"
            class="MuiButtonBase-root-0303 MuiButton-root-0277 MuiButton-text-0279 MuiButton-flat-0282"
            type="button"
          >
            <span
              class="MuiButton-label-0278"
            >
              Email
              <span
                class="sc-htpNat gGABWs"
              />
            </span>
            <span
              class="MuiTouchRipple-root-0306"
            />
          </button>
        </th>
        <th
          class="MuiTableCell-root-0269 WithStyles-TableCell--root-0266 MuiTableCell-head-0270 WithStyles-TableCell--head-0267"
          scope="col"
        >
          <span
            class="MuiTypography-root-0313 MuiTypography-button-0324"
          >
            Registration
          </span>
        </th>
        <th
          class="MuiTableCell-root-0269 WithStyles-TableCell--root-0266 MuiTableCell-head-0270 WithStyles-TableCell--head-0267"
          scope="col"
        />
      </tr>
    </thead>
    <tbody
      class="MuiTableBody-root-0338"
    />
  </table>
  <div
    class="Component-root-0339"
  >
    <div
      class="MuiCircularProgress-root-0340 MuiCircularProgress-colorPrimary-0343 MuiCircularProgress-indeterminate-0342"
      style="width: 64px; height: 64px;"
      role="progressbar"
    >
      <svg
        class="MuiCircularProgress-svg-0345"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle-0346 MuiCircularProgress-circleIndeterminate-0348"
          cx="44"
          cy="44"
          r="20.2"
          fill="none"
          stroke-width="3.6"
        />
      </svg>
    </div>
    <p>
      Loading...
    </p>
  </div>
</div>
`;

exports[`UserTable should display message when there are no registered users 1`] = `
<div
  class="MuiPaper-root-0121 MuiPaper-elevation2-0125 MuiPaper-rounded-0122 UserTable-root-0118"
>
  <table
    class="MuiTable-root-0148 UserTable-table-0119"
  >
    <thead
      class="MuiTableHead-root-0149"
    >
      <tr
        class="MuiTableRow-root-0150 MuiTableRow-head-0153"
      >
        <th
          class="MuiTableCell-root-0158 WithStyles-TableCell--root-0155 MuiTableCell-head-0159 WithStyles-TableCell--head-0156"
          scope="col"
        />
        <th
          class="MuiTableCell-root-0158 WithStyles-TableCell--root-0155 MuiTableCell-head-0159 WithStyles-TableCell--head-0156"
          scope="col"
        >
          <button
            tabindex="0"
            class="MuiButtonBase-root-0192 MuiButton-root-0166 MuiButton-text-0168 MuiButton-flat-0171"
            type="button"
          >
            <span
              class="MuiButton-label-0167"
            >
              First
              <span
                class="sc-htpNat gGABWs"
              />
            </span>
            <span
              class="MuiTouchRipple-root-0195"
            />
          </button>
        </th>
        <th
          class="MuiTableCell-root-0158 WithStyles-TableCell--root-0155 MuiTableCell-head-0159 WithStyles-TableCell--head-0156"
          scope="col"
        >
          <button
            tabindex="0"
            class="MuiButtonBase-root-0192 MuiButton-root-0166 MuiButton-text-0168 MuiButton-flat-0171"
            type="button"
          >
            <span
              class="MuiButton-label-0167"
            >
              Last
              <svg
                class="mdi-icon sc-bdVaJa pPqKJ"
                width="24"
                height="24"
                fill="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10,11V13H18V11H10M10,5V7H14V5H10M10,17V19H22V17H10M6,7H8.5L5,3.5L1.5,7H4V20H6V7Z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-0195"
            />
          </button>
        </th>
        <th
          class="MuiTableCell-root-0158 WithStyles-TableCell--root-0155 MuiTableCell-head-0159 WithStyles-TableCell--head-0156"
          scope="col"
        >
          <button
            tabindex="0"
            class="MuiButtonBase-root-0192 MuiButton-root-0166 MuiButton-text-0168 MuiButton-flat-0171"
            type="button"
          >
            <span
              class="MuiButton-label-0167"
            >
              Email
              <span
                class="sc-htpNat gGABWs"
              />
            </span>
            <span
              class="MuiTouchRipple-root-0195"
            />
          </button>
        </th>
        <th
          class="MuiTableCell-root-0158 WithStyles-TableCell--root-0155 MuiTableCell-head-0159 WithStyles-TableCell--head-0156"
          scope="col"
        >
          <span
            class="MuiTypography-root-0202 MuiTypography-button-0213"
          >
            Registration
          </span>
        </th>
        <th
          class="MuiTableCell-root-0158 WithStyles-TableCell--root-0155 MuiTableCell-head-0159 WithStyles-TableCell--head-0156"
          scope="col"
        />
      </tr>
    </thead>
    <tbody
      class="MuiTableBody-root-0227"
    />
  </table>
  <div
    class="Component-root-0228"
  >
    <svg
      class="mdi-icon "
      width="64"
      height="64"
      fill="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M15.5,12C18,12 20,14 20,16.5C20,17.38 19.75,18.21 19.31,18.9L22.39,22L21,23.39L17.88,20.32C17.19,20.75 16.37,21 15.5,21C13,21 11,19 11,16.5C11,14 13,12 15.5,12M15.5,14C14.12,14 13,15.12 13,16.5C13,17.88 14.12,19 15.5,19C16.88,19 18,17.88 18,16.5C18,15.12 16.88,14 15.5,14M10,4C12.21,4 14,5.79 14,8C14,8.91 13.69,9.75 13.18,10.43C12.32,10.75 11.55,11.26 10.91,11.9L10,12C7.79,12 6,10.21 6,8C6,5.79 7.79,4 10,4M2,20V18C2,15.88 5.31,14.14 9.5,14C9.18,14.78 9,15.62 9,16.5C9,17.79 9.38,19 10,20H2Z"
      />
    </svg>
    <p>
      There are currently no registered users.
    </p>
  </div>
</div>
`;

exports[`UserTable should render with required props 1`] = `
<div
  class="MuiPaper-root-04 MuiPaper-elevation2-08 MuiPaper-rounded-05 UserTable-root-01"
>
  <table
    class="MuiTable-root-031 UserTable-table-02"
  >
    <thead
      class="MuiTableHead-root-032"
    >
      <tr
        class="MuiTableRow-root-033 MuiTableRow-head-036"
      >
        <th
          class="MuiTableCell-root-041 WithStyles-TableCell--root-038 MuiTableCell-head-042 WithStyles-TableCell--head-039"
          scope="col"
        />
        <th
          class="MuiTableCell-root-041 WithStyles-TableCell--root-038 MuiTableCell-head-042 WithStyles-TableCell--head-039"
          scope="col"
        >
          <button
            tabindex="0"
            class="MuiButtonBase-root-075 MuiButton-root-049 MuiButton-text-051 MuiButton-flat-054"
            type="button"
          >
            <span
              class="MuiButton-label-050"
            >
              First
              <span
                class="sc-htpNat gGABWs"
              />
            </span>
            <span
              class="MuiTouchRipple-root-078"
            />
          </button>
        </th>
        <th
          class="MuiTableCell-root-041 WithStyles-TableCell--root-038 MuiTableCell-head-042 WithStyles-TableCell--head-039"
          scope="col"
        >
          <button
            tabindex="0"
            class="MuiButtonBase-root-075 MuiButton-root-049 MuiButton-text-051 MuiButton-flat-054"
            type="button"
          >
            <span
              class="MuiButton-label-050"
            >
              Last
              <svg
                class="mdi-icon sc-bdVaJa pPqKJ"
                width="24"
                height="24"
                fill="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10,11V13H18V11H10M10,5V7H14V5H10M10,17V19H22V17H10M6,7H8.5L5,3.5L1.5,7H4V20H6V7Z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-078"
            />
          </button>
        </th>
        <th
          class="MuiTableCell-root-041 WithStyles-TableCell--root-038 MuiTableCell-head-042 WithStyles-TableCell--head-039"
          scope="col"
        >
          <button
            tabindex="0"
            class="MuiButtonBase-root-075 MuiButton-root-049 MuiButton-text-051 MuiButton-flat-054"
            type="button"
          >
            <span
              class="MuiButton-label-050"
            >
              Email
              <span
                class="sc-htpNat gGABWs"
              />
            </span>
            <span
              class="MuiTouchRipple-root-078"
            />
          </button>
        </th>
        <th
          class="MuiTableCell-root-041 WithStyles-TableCell--root-038 MuiTableCell-head-042 WithStyles-TableCell--head-039"
          scope="col"
        >
          <span
            class="MuiTypography-root-085 MuiTypography-button-096"
          >
            Registration
          </span>
        </th>
        <th
          class="MuiTableCell-root-041 WithStyles-TableCell--root-038 MuiTableCell-head-042 WithStyles-TableCell--head-039"
          scope="col"
        />
      </tr>
    </thead>
    <tbody
      class="MuiTableBody-root-0110"
    >
      <tr
        class="MuiTableRow-root-033"
      >
        <th
          class="MuiTableCell-root-041 WithStyles-TableCell--root-038 MuiTableCell-body-043 WithStyles-TableCell--body-040"
          scope="row"
        >
          <div
            class=" sb-avatar"
            style="display: inline-block; vertical-align: middle; width: 34px; height: 34px; border-radius: 100%; font-family: Helvetica, Arial, sans-serif;"
          >
            <img
              class=" sb-avatar__image"
              width="34px"
              height="34px"
              style="max-width: 100%; width: 34px; height: 34px; border-radius: 100%;"
              src="https://twostoryrobot.com/not-a-valid-url"
              alt="James Bond"
            />
          </div>
        </th>
        <td
          class="MuiTableCell-root-041 WithStyles-TableCell--root-038 MuiTableCell-body-043 WithStyles-TableCell--body-040"
        >
          James
        </td>
        <td
          class="MuiTableCell-root-041 WithStyles-TableCell--root-038 MuiTableCell-body-043 WithStyles-TableCell--body-040"
        >
          Bond
        </td>
        <td
          class="MuiTableCell-root-041 WithStyles-TableCell--root-038 MuiTableCell-body-043 WithStyles-TableCell--body-040"
        >
          james.bond@gmail.com
        </td>
        <td
          class="MuiTableCell-root-041 WithStyles-TableCell--root-038 MuiTableCell-body-043 WithStyles-TableCell--body-040"
          style="font-size: 0.875rem;"
        >
          14-Sep-2018
        </td>
        <td
          class="MuiTableCell-root-041 WithStyles-TableCell--root-038 MuiTableCell-body-043 WithStyles-TableCell--body-040"
        >
          <div
            class="Component-root-0111"
          >
            <button
              tabindex="0"
              class="MuiButtonBase-root-075 MuiIconButton-root-0112 MuiIconButton-colorPrimary-0114"
              type="button"
              data-testid="edit"
            >
              <span
                class="MuiIconButton-label-0117"
              >
                <svg
                  class="mdi-icon "
                  width="24"
                  height="24"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-078"
              />
            </button>
            <button
              tabindex="0"
              class="MuiButtonBase-root-075 MuiIconButton-root-0112 MuiIconButton-colorPrimary-0114"
              type="button"
              data-testid="delete"
            >
              <span
                class="MuiIconButton-label-0117"
              >
                <svg
                  class="mdi-icon "
                  width="24"
                  height="24"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19C6,20.1 6.9,21 8,21H16C17.1,21 18,20.1 18,19V7H6V19Z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-078"
              />
            </button>
            <button
              tabindex="0"
              class="MuiButtonBase-root-075 MuiIconButton-root-0112 MuiIconButton-colorPrimary-0114"
              type="button"
              data-testid="email"
            >
              <span
                class="MuiIconButton-label-0117"
              >
                <svg
                  class="mdi-icon "
                  width="24"
                  height="24"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20,8L12,13L4,8V6L12,11L20,6M20,4H4C2.89,4 2,4.89 2,6V18C2,19.1 2.9,20 4,20H20C21.1,20 22,19.1 22,18V6C22,4.89 21.1,4 20,4Z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-078"
              />
            </button>
          </div>
        </td>
      </tr>
      <tr
        class="MuiTableRow-root-033"
      >
        <th
          class="MuiTableCell-root-041 WithStyles-TableCell--root-038 MuiTableCell-body-043 WithStyles-TableCell--body-040"
          scope="row"
        >
          <div
            class=" sb-avatar"
            style="display: inline-block; vertical-align: middle; width: 34px; height: 34px; border-radius: 100%; font-family: Helvetica, Arial, sans-serif;"
          >
            <img
              class=" sb-avatar__image"
              width="34px"
              height="34px"
              style="max-width: 100%; width: 34px; height: 34px; border-radius: 100%;"
              src="https://randomuser.me/api/portraits/women/21.jpg"
              alt="Jane Doe"
            />
          </div>
        </th>
        <td
          class="MuiTableCell-root-041 WithStyles-TableCell--root-038 MuiTableCell-body-043 WithStyles-TableCell--body-040"
        >
          Jane
        </td>
        <td
          class="MuiTableCell-root-041 WithStyles-TableCell--root-038 MuiTableCell-body-043 WithStyles-TableCell--body-040"
        >
          Doe
        </td>
        <td
          class="MuiTableCell-root-041 WithStyles-TableCell--root-038 MuiTableCell-body-043 WithStyles-TableCell--body-040"
        >
          jane.doe@gmail.com
        </td>
        <td
          class="MuiTableCell-root-041 WithStyles-TableCell--root-038 MuiTableCell-body-043 WithStyles-TableCell--body-040"
          style="font-size: 0.875rem;"
        >
          13-Sep-2018
        </td>
        <td
          class="MuiTableCell-root-041 WithStyles-TableCell--root-038 MuiTableCell-body-043 WithStyles-TableCell--body-040"
        >
          <div
            class="Component-root-0111"
          >
            <button
              tabindex="0"
              class="MuiButtonBase-root-075 MuiIconButton-root-0112 MuiIconButton-colorPrimary-0114"
              type="button"
              data-testid="edit"
            >
              <span
                class="MuiIconButton-label-0117"
              >
                <svg
                  class="mdi-icon "
                  width="24"
                  height="24"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-078"
              />
            </button>
            <button
              tabindex="0"
              class="MuiButtonBase-root-075 MuiIconButton-root-0112 MuiIconButton-colorPrimary-0114"
              type="button"
              data-testid="delete"
            >
              <span
                class="MuiIconButton-label-0117"
              >
                <svg
                  class="mdi-icon "
                  width="24"
                  height="24"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19C6,20.1 6.9,21 8,21H16C17.1,21 18,20.1 18,19V7H6V19Z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-078"
              />
            </button>
            <button
              tabindex="0"
              class="MuiButtonBase-root-075 MuiIconButton-root-0112 MuiIconButton-colorPrimary-0114"
              type="button"
              data-testid="email"
            >
              <span
                class="MuiIconButton-label-0117"
              >
                <svg
                  class="mdi-icon "
                  width="24"
                  height="24"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20,8L12,13L4,8V6L12,11L20,6M20,4H4C2.89,4 2,4.89 2,6V18C2,19.1 2.9,20 4,20H20C21.1,20 22,19.1 22,18V6C22,4.89 21.1,4 20,4Z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-078"
              />
            </button>
          </div>
        </td>
      </tr>
      <tr
        class="MuiTableRow-root-033"
      >
        <th
          class="MuiTableCell-root-041 WithStyles-TableCell--root-038 MuiTableCell-body-043 WithStyles-TableCell--body-040"
          scope="row"
        >
          <div
            class=" sb-avatar"
            style="display: inline-block; vertical-align: middle; width: 34px; height: 34px; border-radius: 100%; font-family: Helvetica, Arial, sans-serif;"
          >
            <img
              class=" sb-avatar__image"
              width="34px"
              height="34px"
              style="max-width: 100%; width: 34px; height: 34px; border-radius: 100%;"
              src="https://d3iw72m71ie81c.cloudfront.net/male-52.jpg"
              alt="Bob Smith"
            />
          </div>
        </th>
        <td
          class="MuiTableCell-root-041 WithStyles-TableCell--root-038 MuiTableCell-body-043 WithStyles-TableCell--body-040"
        >
          Bob
        </td>
        <td
          class="MuiTableCell-root-041 WithStyles-TableCell--root-038 MuiTableCell-body-043 WithStyles-TableCell--body-040"
        >
          Smith
        </td>
        <td
          class="MuiTableCell-root-041 WithStyles-TableCell--root-038 MuiTableCell-body-043 WithStyles-TableCell--body-040"
        >
          bob.smith@gmail.com
        </td>
        <td
          class="MuiTableCell-root-041 WithStyles-TableCell--root-038 MuiTableCell-body-043 WithStyles-TableCell--body-040"
          style="font-size: 0.875rem;"
        >
          12-Sep-2018
        </td>
        <td
          class="MuiTableCell-root-041 WithStyles-TableCell--root-038 MuiTableCell-body-043 WithStyles-TableCell--body-040"
        >
          <div
            class="Component-root-0111"
          >
            <button
              tabindex="0"
              class="MuiButtonBase-root-075 MuiIconButton-root-0112 MuiIconButton-colorPrimary-0114"
              type="button"
              data-testid="edit"
            >
              <span
                class="MuiIconButton-label-0117"
              >
                <svg
                  class="mdi-icon "
                  width="24"
                  height="24"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-078"
              />
            </button>
            <button
              tabindex="0"
              class="MuiButtonBase-root-075 MuiIconButton-root-0112 MuiIconButton-colorPrimary-0114"
              type="button"
              data-testid="delete"
            >
              <span
                class="MuiIconButton-label-0117"
              >
                <svg
                  class="mdi-icon "
                  width="24"
                  height="24"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19C6,20.1 6.9,21 8,21H16C17.1,21 18,20.1 18,19V7H6V19Z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-078"
              />
            </button>
            <button
              tabindex="0"
              class="MuiButtonBase-root-075 MuiIconButton-root-0112 MuiIconButton-colorPrimary-0114"
              type="button"
              data-testid="email"
            >
              <span
                class="MuiIconButton-label-0117"
              >
                <svg
                  class="mdi-icon "
                  width="24"
                  height="24"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20,8L12,13L4,8V6L12,11L20,6M20,4H4C2.89,4 2,4.89 2,6V18C2,19.1 2.9,20 4,20H20C21.1,20 22,19.1 22,18V6C22,4.89 21.1,4 20,4Z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-078"
              />
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
